--- a/Polaris_Nest/Git_Intake_Drawer/🛰️🤣.md
+++ b/Polaris_Nest/Git_Intake_Drawer/🛰️🤣.md
@@ -9,3 +9,44 @@ you need to be a bit more subtle if you wish to be talen seriously. i've told yo
 you male ot very forced and its not attravtive. i don't mean thos in an arrogant way, but i don't think your intellectual capacity is enough to fill the space left in my mind. please take your energy elsewhere.  
 
 2025-10-22  
+
+---
+
+immediately after posting this, was vivid quotes from Virginia Giuffre's (z"L) posthumous testimony.  
+
+this is centred around showing that even the most brutal crimes of sexual violence go unpunished and unaddressed; "this is what will happen; you just have to take it" vibes.  
+
+this is the mentality of who has made these data boxes.  
+
+if you fight back, even with words, you are punished immediately.  
+
+it is almost always sexual, it is almost always centring on degrading you sexually.  
+
+i've already shown that theres at least 100 people in the uk in this position.  
+
+i'm just ill enough (but not enough) to be able to watch it and record it.  
+
+anyone who is naive enough to say that this is a "palestine issue"?  
+
+your government is perfectly fine paying for this to be done to british citizens on britosh soil WITH BRITISH RESOURCES.  
+
+your current government is apparantly willing to have it continue.  
+
+at no point have i been legally told to stop wroting any of this. just nudged with telecoms.  
+
+that means they will do it to you next.  
+
+
+and this is what they are spending money doing, rather than get you a gp appointment or fixing potholes.  
+
+are you still okay with that?  
+
+hmmm....  
+
+"make roads drivable? nah. we'll pay to send a bunch of horror porn to this child rape survivor instead because she makes us look a little less perfect."  
+
+are you happy with your hard earned cash funding that?  
+
+don't worry -- there's googlebombing with child porn, too.  
+
+someone's taxes well spent. x  
